--- a/RS.Bots/RS.Bots.Domain/RS.Bots.Domain.csproj
+++ b/RS.Bots/RS.Bots.Domain/RS.Bots.Domain.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\VisionResult.cs" />
     <Compile Include="Interfaces\IBot.cs" />
     <Compile Include="Interfaces\IVisionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,5 +66,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
