--- a/RS.Bots/RS.Bots.Domain/packages.config
+++ b/RS.Bots/RS.Bots.Domain/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Emgu.CV" version="4.2.0.3662" targetFramework="net472" />
+  <package id="Emgu.CV.runtime.windows" version="4.2.0.3662" targetFramework="net472" />
   <package id="Microsoft.Azure.CognitiveServices.Vision.ComputerVision" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.18" targetFramework="net472" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net472" />
+  <package id="OpenTK" version="1.1.2225.0" targetFramework="net472" />
+  <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net472" />
+  <package id="ZedGraph" version="5.1.7" targetFramework="net472" />
 </packages>
